# roadwebsocket

./: README.md  pyproject.toml
src/roadwebsocket/: __init__.py  websocket.py
